--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,37 +1,3 @@
-name: Generate Snake
-
-on:
-  schedule:
-    - cron: '0 */6 * * *'  # Runs every 6 hours
-  workflow_dispatch:
-
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v2
-
-      - name: Generate snake
-        uses: Platane/snk@master
-        id: snake-gif
-        with:
-          github_user_name: HossamGouda
-          output: |
-            dist/github-contribution-grid-snake.gif
-            dist/github-contribution-grid-snake.svg
-
-      - name: Push changes
-        uses: ad-m/github-push-action@master
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          branch: master
-          force: true
-
-      - name: Publish to GitHub Pages
-        uses: crazy-max/ghaction-github-pages@v2.13
-        with:
-          target_branch: output
-          build_dir: dist
-          env:
-            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+- name: generate-snake-game-from-github-contribution-grid
+  uses: Platane/snk@v3.2.0
+            
